# RabbitLLM

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  change_requirements.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  BENCHMARK_HISTORY.md  COMPATIBILITY.md  TRANSFORMERS_UPGRADE_PLAN.md  TROUBLESHOOTING.md
scripts/: benchmark_cpu_vs_cuda.py  chat_inference.py  check_attention_and_benchmark.py  check_model_families.py  inference_example.py  profile_inference.py  quickstart.py
src/rabbitllm/: __init__.py  profiler.py
src/rabbitllm/compat/: tokenization_baichuan.py
src/rabbitllm/engine/: attention.py  base.py  forward_utils.py  layer_loading.py  mlx_engine.py  model_init.py
src/rabbitllm/models/: baichuan.py  chatglm.py  internlm.py  llama.py  mistral.py  mixtral.py  qwen.py  qwen2.py  qwen3.py  registry.py
src/rabbitllm/persist/: __init__.py  base.py  mlx.py  safetensor.py
src/rabbitllm/utils/: __init__.py  compression.py  memory.py  platform.py  splitting.py
tests/: test_base_model.py  test_compression.py  test_model_registry.py  test_persister.py  test_platform.py  test_profiler.py  test_splitting.py
